--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       </div>
       <div class="col s6">
-        <form name="proj1" onsubmit="return validateForm()" method="POST">
+        <form name="proj1" onsubmit="return validateForm()" action="/action_page.php" method="POST">
           <!-- name section -->
           <label for="name">Full Name: </label>
           <span id='error'></span>
